traces/bug_261.txt
src/femlib/GQuadTree.cpp:226: error: DEAD_STORE
  The value written to &h (type long) is never used.
Showing all 1 steps of the trace


src/femlib/GQuadTree.cpp:226:5: Write of unused value
224.       int l=0; // level
225.       QuadTreeBox * b;
226.       long h=MaxISize;
           ^
227.       long hb =  MaxISize;
228.       Zd p0( 0 );
